<resources>
    <string name="app_name">Infused Paint</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="login_with_">Login with Gmail</string>
    <string name="don_t_have_">Dont have account? Register here</string>
    <string name="confirm_pas">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_wi">Register with Gmail</string>
    <string name="already_hav">Already have account? Login here</string>
    <string name="hi_welcome_">Hi!\nWelcome to\nInfused Paint.</string>
    <string name="pick_your_r">Pick your reference style</string>
    <string name="next">Next</string>
    <string name="choose_your">Choose your best photo</string>
    <string name="share_the_r">Share the result to your \nfriends and family!</string>
    <string name="are_you_rea">Are you ready\nto feel the fun?</string>
    <string name="i_m_ready_">Im ready!</string>
    <string name="your_artwor">Your artwork gallery</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="frans_benit">Frans Benitto</string>
    <string name="fransbennit">fransbennito@gmail.com</string>
    <string name="joined_at_0">Joined At: 09/12/2020</string>
    <string name="pick_your_s">Pick your style</string>
    <string name="starry_nigh">Starry Night</string>
    <string name="by_vincent_">by Vincent Van Gogh</string>
    <string name="looking_for">Looking For My Betty Ross</string>
    <string name="by_piscasso">by Piscasso</string>
    <string name="the_great_w">The Great Wave of Kanagawa</string>
    <string name="by_katsushi">by Katsushika Hokusai</string>
    <string name="upload_your">Upload your Image</string>
    <string name="from_camera">from\ncamera</string>
    <string name="from_galler">from\ngallery</string>
</resources>