<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/input"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-60dp"
            android:paddingHorizontal="10dp"
            android:text="@string/email"
            android:background="@color/colorPrimaryDark"
            android:textAppearance="@style/sp12_ffffff_reg"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/input"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-60dp"
            android:paddingHorizontal="10dp"
            android:text="@string/password"
            android:background="@color/colorPrimaryDark"
            android:textAppearance="@style/sp12_ffffff_reg"/>

        <EditText
            android:id="@+id/confirm_password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/input"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-60dp"
            android:paddingHorizontal="10dp"
            android:text="@string/confirm_pas"
            android:background="@color/colorPrimaryDark"
            android:textAppearance="@style/sp12_ffffff_reg"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_rectangle"
            android:text="@string/register"
            android:textAppearance="@style/sp16_000000_bold" />

        <View
            android:id="@+id/vector_1"
            android:layout_width="277dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/vector_1" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-15dp"
            android:text="@string/or"
            android:paddingHorizontal="23dp"
            android:background="@color/colorPrimaryDark"
            android:textAppearance="@style/sp16_ffffff_bold" />

        <Button
            android:id="@+id/google_login_button"
            android:layout_width="305dp"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_rectangle"
            android:text="@string/register_wi"
            android:textAppearance="@style/sp16_000000_bold"/>

        <TextView
            android:id="@+id/already_hav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/already_hav"
            android:textAppearance="@style/sp16_ffffff_reg"/>

    </LinearLayout>

</ScrollView>