<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="222dp"
        android:background="@drawable/input"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="215dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/email"
        android:textAppearance="@style/sp12_ffffff_reg"
        android:gravity="center_vertical"
        android:background="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="312dp"
        android:background="@drawable/input"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="305dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/password"
        android:textAppearance="@style/sp12_ffffff_reg"
        android:gravity="center_vertical"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="390dp"
        android:background="@drawable/button_rectangle"
        android:text="@string/log_in"
        android:textAppearance="@style/sp16_000000_bold" />

    <View
        android:id="@+id/vector_1"
        android:layout_width="277dp"
        android:layout_height="2dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="479dp"
        android:background="@drawable/vector_1" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="468dp"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:text="@string/or"
        android:textAppearance="@style/sp16_ffffff_bold"
        android:background="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/google_login_button"
        android:layout_width="305dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="524dp"
        android:background="@drawable/button_rectangle"
        android:text="@string/login_with_"
        android:textAppearance="@style/sp16_000000_bold" />

    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="674dp"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/sp16_ffffff_reg"/>

</RelativeLayout>