<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/uploadImage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorSecondary">
<!--    android:background="@drawable/bottomsheetbackground">-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="15dp"
        android:text="@string/upload_your"
        style="@style/profile"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="30dp"


        >


        <Button
            android:id="@+id/btn_uploadCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/upload_button"
            android:drawableTop="@drawable/ic_camera"
            android:padding="16dp"
            android:text="@string/from_camera"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btn_uploadGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/upload_button"
            android:drawableTop="@drawable/ic_gallery"
            android:padding="16dp"
            android:text="@string/from_galler"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>



