<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="132dp"
            android:layout_height="132dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/google_login_button"
            android:layout_width="300dp"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/ripple"
            android:text="Login With Google"
            android:drawableLeft="@drawable/common_google_signin_btn_icon_dark_normal"
            android:textAppearance="@style/sp16_000000_bold" />

        <View
            android:id="@+id/vector_1"
            android:layout_width="277dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/vector_1" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-15dp"
            android:paddingHorizontal="23dp"
            android:text="@string/or"
            android:textAppearance="@style/sp16_ffffff_bold"
            android:background="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/input"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-60dp"
            android:layout_marginStart="50dp"
            android:paddingHorizontal="10dp"
            android:text="@string/email"
            android:textAppearance="@style/sp12_ffffff_reg"
            android:gravity="center_vertical"
            android:background="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/input"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:layout_marginTop="-60dp"
            android:paddingHorizontal="10dp"
            android:text="@string/password"
            android:textAppearance="@style/sp12_ffffff_reg"
            android:gravity="center_vertical"
            android:background="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/ripple"
            android:text="@string/log_in"
            android:textAppearance="@style/sp16_000000_bold"
            />



<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:id="@+id/sign_in_button"-->
<!--            android:layout_width="305dp"-->
<!--            android:layout_height="51dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_margin="20dp"/>-->



        <TextView
            android:id="@+id/don_t_have_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/don_t_have_"
            android:textAppearance="@style/sp16_ffffff_reg"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"/>

    </LinearLayout>

</ScrollView>